--- a/CCFS Tickets/Src/App.fx.yaml
+++ b/CCFS Tickets/Src/App.fx.yaml
@@ -230,7 +230,7 @@ App As appinfo:
             Param("NavigateScreen"),
             "TicketScreen",
             'Ticket Information',
-           Dashboard
+           Dashboard_1
         )
     Theme: =PowerAppsTheme
 
