--- a/CCFS Tickets/Src/Asset Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Asset Dashboard.fx.yaml
@@ -1970,6 +1970,7 @@
                                 ).status;
                                 
                             );
+                            Notify(AssetImageRES,NotificationType.Information);
                             Refresh(Assets_Images);
                             Set(
                                 NewAttachementContainerVisble,
