--- a/CCFS Tickets/CanvasManifest.json
+++ b/CCFS Tickets/CanvasManifest.json
@@ -5,7 +5,7 @@
       "DataflowAnalysisEnabled": false,
       "DataflowAnalysisFlagStateToggledByUser": false
     },
-    "DocVersion": "1.336",
+    "DocVersion": "1.337",
     "MinVersionToLoad": "1.331",
     "MSAppStructureVersion": "2.0"
   },
@@ -77,7 +77,7 @@
       "pdffunction": true,
       "powerfxdecimal": false,
       "powerfxv1": false,
-      "primaryoutputpropertycoerciondeprecated": false,
+      "primaryoutputpropertycoerciondeprecated": true,
       "projectionmapping": true,
       "reactformulabar": true,
       "reliableconcurrent": true,
@@ -115,7 +115,7 @@
     "FileID": "424d23a6-f7c3-4a14-93bf-1dae6f4a980b",
     "Id": "27104b61-f61b-4b74-aaaa-200216cd135c",
     "InstrumentationKey": "",
-    "LocalDatabaseReferences": "{}",
+    "LocalDatabaseReferences": "",
     "ManualOfflineProfileId": "",
     "Name": "CCFS Tickets",
     "OriginatingVersion": "1.326",
