--- a/CCFS Tickets/Src/Dashboard.fx.yaml
+++ b/CCFS Tickets/Src/Dashboard.fx.yaml
@@ -24,7 +24,7 @@
         Width: =Parent.Width
         ZIndex: =1
 
-        Header1 As Header:
+        "'CCTP Dashboard Header' As Header":
             BasePaletteColor: =
             DisplayMode: =DisplayMode.Edit
             Font: =""
@@ -43,7 +43,7 @@
             Y: =0
             ZIndex: =1
 
-        Container1_4 As groupContainer.verticalAutoLayoutContainer:
+        Navigation As groupContainer.verticalAutoLayoutContainer:
             DropShadow: =DropShadow.Light
             Fill: =RGBA(255, 255, 255, 1)
             FillPortions: =0
@@ -69,6 +69,7 @@
                 ZIndex: =1
 
             Container2 As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 FillPortions: =0
                 Height: =Label8.Height+DropdownCanvas1_6.Height
@@ -128,9 +129,9 @@
                 Repeat: =true
                 ZIndex: =3
 
-        BottomContainer2 As groupContainer.horizontalAutoLayoutContainer:
+        "'RU, OT, OT45D' As groupContainer.horizontalAutoLayoutContainer":
             Fill: =RGBA(245, 245, 245, 1)
-            Height: =SidebarContainer3_1.Height+SidebarContainer3_2.Height+MainContainer2.Height
+            Height: ='Recently Updated'.Height+'Older Than 45 Days'.Height+'Open Tickets'.Height
             LayoutAlignItems: =LayoutAlignItems.Stretch
             LayoutGap: =5
             LayoutMinHeight: =If(Dashboard.Size < 4,400,200)
@@ -148,19 +149,20 @@
             RadiusTopRight: =4
             ZIndex: =3
 
-            SidebarContainer3_1 As groupContainer.verticalAutoLayoutContainer:
+            "'Recently Updated' As groupContainer.verticalAutoLayoutContainer":
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =MainContainer1.Height
                 LayoutDirection: =LayoutDirection.Vertical
                 LayoutGap: =5
-                LayoutMinHeight: =Gallery7_1.Height
+                LayoutMinHeight: ='RU Body'.Height
                 LayoutMinWidth: |-
                     = If(
                             Dashboard.Width <= 640,  // Small screens
-                            BottomContainer2.Width,
+                            'RU, OT, OT45D'.Width,
                             // Add conditions for medium and large screens as needed
-                            BottomContainer2.Width / 8  // Example for larger screens
+                            'RU, OT, OT45D'.Width / 8  // Example for larger screens
                         )
                 LayoutMode: =LayoutMode.Auto
                 RadiusBottomLeft: =8
@@ -169,7 +171,7 @@
                 RadiusTopRight: =8
                 ZIndex: =1
 
-                Label18_20 As label:
+                "'RU Label' As label":
                     Align: =Align.Center
                     BorderColor: =RGBA(0, 89, 178, 1)
                     Color: =RGBA(204, 214, 224, 1)
@@ -187,7 +189,7 @@
                     Y: =0.00
                     ZIndex: =2
 
-                "Gallery7_1 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
+                "'RU Body' As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                     AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(219, 219, 219, 1)
                     BorderThickness: =2
@@ -197,7 +199,7 @@
                     Items: |-
                         =Sort(
                             Filter(
-                                Gallery7.AllItems,
+                                'OT Body'.AllItems,
                                 DateValue(
                                     Text(
                                         LastModified,
@@ -218,7 +220,7 @@
                             SortOrder.Descending
                         )
                     Layout: =Layout.Vertical
-                    LayoutMinHeight: =(Gallery7_1.TemplateHeight * Gallery7_1.AllItemsCount) + ((Gallery7_1.TemplateHeight * Gallery7_1.AllItemsCount) * 25%)
+                    LayoutMinHeight: =('RU Body'.TemplateHeight * 'RU Body'.AllItemsCount) + (('RU Body'.TemplateHeight * 'RU Body'.AllItemsCount) * 25%)
                     LayoutMinWidth: =320
                     LoadingSpinner: =LoadingSpinner.Data
                     OnSelect: =
@@ -228,7 +230,7 @@
                     Width: =Parent.Width
                     ZIndex: =3
 
-                    Title9_1 As label:
+                    "'RU Ticket # and Name' As label":
                         Color: =RGBA(50, 49, 48, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         DisplayMode: =DisplayMode.View
@@ -269,7 +271,7 @@
                                 First(
                                     Filter(
                                         Tickets_Master,
-                                        Ticket_ID = Int(Gallery7_1.Selected.Ticket_ID)
+                                        Ticket_ID = Int('RU Body'.Selected.Ticket_ID)
                                     )
                                 )
                             );
@@ -286,7 +288,7 @@
                         Y: =0.00
                         ZIndex: =6
 
-                    TextCanvas9 As Text:
+                    "'Modified: Date, Time' As Text":
                         AutoHeight: =true
                         DisplayMode: =DisplayMode.Edit
                         FontColor: =
@@ -299,19 +301,20 @@
                         Y: =44
                         ZIndex: =7
 
-            MainContainer2 As groupContainer.verticalAutoLayoutContainer:
+            "'Open Tickets' As groupContainer.verticalAutoLayoutContainer":
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =3
-                Height: =Gallery7.LayoutMinHeight
+                Height: ='OT Body'.LayoutMinHeight
                 LayoutDirection: =LayoutDirection.Vertical
-                LayoutMinHeight: =Gallery7.Height
+                LayoutMinHeight: ='OT Body'.Height
                 LayoutMinWidth: |-
                     = If(
                             Dashboard.Width <= 640,  // Small screens
-                            BottomContainer2.Width,
+                            'RU, OT, OT45D'.Width,
                             // Add conditions for medium and large screens as needed
-                            BottomContainer2.Width / 3 // Example for larger screens
+                            'RU, OT, OT45D'.Width / 3 // Example for larger screens
                         )
                 LayoutMode: =LayoutMode.Auto
                 RadiusBottomLeft: =8
@@ -319,13 +322,14 @@
                 RadiusTopLeft: =8
                 RadiusTopRight: =8
                 Width: =Parent.Width
-                Y: = If(Dashboard.Width <= 640, SidebarContainer3_2.Y + SidebarContainer3_2.Height, 0)
+                Y: = If(Dashboard.Width <= 640, 'Older Than 45 Days'.Y + 'Older Than 45 Days'.Height, 0)
                 ZIndex: =2
 
-                Container4 As groupContainer.horizontalAutoLayoutContainer:
+                "'OT Header w/ Button' As groupContainer.horizontalAutoLayoutContainer":
+                    AlignInContainer: =AlignInContainer.SetByContainer
                     DropShadow: =DropShadow.Light
                     FillPortions: =0
-                    Height: =Label18_1.Height
+                    Height: ='OT Label'.Height
                     LayoutMinHeight: =100
                     LayoutMinWidth: =250
                     LayoutMode: =LayoutMode.Auto
@@ -333,9 +337,10 @@
                     RadiusBottomRight: =4
                     RadiusTopLeft: =4
                     RadiusTopRight: =4
+                    Width: =785
                     ZIndex: =1
 
-                    Label18_1 As label:
+                    "'OT Label' As label":
                         Align: =Align.Center
                         BorderColor: =RGBA(0, 89, 178, 1)
                         Color: =RGBA(204, 214, 224, 1)
@@ -350,45 +355,45 @@
                         Text: |
                             =If(
                                 UserAdmin = 1,
-                                "Open Tickets: " & CountRows(Gallery7.AllItems),
-                                "My Tickets: " & CountRows(Gallery7.AllItems)
+                                "Open Tickets: " & CountRows('OT Body'.AllItems),
+                                "My Tickets: " & CountRows('OT Body'.AllItems)
                             )
-                        Width: =Parent.Width - Icon1.Width - Icon1_2.Width
+                        Width: =Parent.Width - 'New Ticket Icon'.Width - 'Refresh Icon'.Width
                         X: =0.00
                         Y: =0.00
                         ZIndex: =1
 
-                    Icon1 As icon.Reload:
+                    "'New Ticket Icon' As icon.Reload":
                         BorderColor: =RGBA(0, 89, 178, 1)
                         Color: =RGBA(255, 255, 255, 1)
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
-                        Fill: =Label18_1.Fill
-                        Height: =Label18_1.Height
+                        Fill: ='OT Label'.Fill
+                        Height: ='OT Label'.Height
                         Icon: =Icon.DocumentWithContent
                         OnSelect: |-
                             =Navigate('Ticket Information');
                             NewForm(TicketDataEditForm);
                         ZIndex: =2
 
-                    Icon1_2 As icon.Reload:
+                    "'Refresh Icon' As icon.Reload":
                         BorderColor: =RGBA(0, 89, 178, 1)
                         Color: =RGBA(255, 255, 255, 1)
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
-                        Fill: =Label18_1.Fill
-                        Height: =Label18_1.Height-.5
+                        Fill: ='OT Label'.Fill
+                        Height: ='OT Label'.Height-.5
                         Icon: =Icon.Reload
                         OnSelect: =Refresh(Tickets_Master);
                         ZIndex: =3
 
-                "Gallery7 As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
+                "'OT Body' As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver5.0'":
                     AlignInContainer: =AlignInContainer.SetByContainer
                     BorderColor: =RGBA(219, 219, 219, 1)
                     BorderThickness: =2
                     DelayItemLoading: =true
                     Fill: =RGBA(204, 214, 224, 1)
-                    Height: =Parent.Height - Gallery7.Y
+                    Height: =Parent.Height - 'OT Body'.Y
                     Items: |
                         =// Assuming 'Tickets_Master' is your data source and all fields used in filtering and sorting are delegable
                         // 'UserAdmin', 'Private', and 'Ticket_Status_ID' need to be delegable fields in your data source
@@ -403,17 +408,17 @@
                             SortOrder.Descending
                         )
                     Layout: =Layout.Vertical
-                    LayoutMinHeight: =(Gallery7.TemplateHeight * Gallery7.AllItemsCount) + ((Gallery7.TemplateHeight * Gallery7.AllItemsCount) * 25%)
+                    LayoutMinHeight: =('OT Body'.TemplateHeight * 'OT Body'.AllItemsCount) + (('OT Body'.TemplateHeight * 'OT Body'.AllItemsCount) * 25%)
                     LayoutMinWidth: =320
                     LoadingSpinner: =LoadingSpinner.Data
                     OnSelect: =
                     ShowNavigation: =true
-                    TemplateFill: =If(ThisItem.IsSelected, Color.LightGray, Gallery7.Fill)
+                    TemplateFill: =If(ThisItem.IsSelected, Color.LightGray, 'OT Body'.Fill)
                     TemplateSize: =75
                     Width: =Parent.Width
                     ZIndex: =3
 
-                    Title9 As label:
+                    "'OT Ticket # and Name' As label":
                         Color: =RGBA(50, 49, 48, 1)
                         DisabledColor: =RGBA(166, 166, 166, 1)
                         DisplayMode: =DisplayMode.View
@@ -441,7 +446,7 @@
                         Width: =4
                         ZIndex: =3
 
-                    Label16_1 As label:
+                    "'Ticket Status' As label":
                         AutoHeight: =true
                         BorderColor: =RGBA(0, 89, 178, 1)
                         Color: =RGBA(0, 0, 0, 1)
@@ -457,7 +462,7 @@
                                     1
                                 ),
                                 If(
-                                    "Closed" in Label16_1.Text,
+                                    "Closed" in 'Ticket Status'.Text,
                                     RGBA(
                                         238,
                                         204,
@@ -465,14 +470,14 @@
                                         1
                                     ),
                                     If(
-                                        "Progress" in Label16_1.Text,
+                                        "Progress" in 'Ticket Status'.Text,
                                       RGBA(250, 155, 112, 1)
                                     )
                                 )
                             )
                         FontWeight: =FontWeight.Lighter
                         Height: =25
-                        OnSelect: =Select(Gallery7)
+                        OnSelect: =Select('OT Body')
                         PaddingBottom: =0
                         PaddingLeft: =0
                         PaddingRight: =0
@@ -496,7 +501,7 @@
                         Color: =RGBA(0, 0, 0, 0)
                         DisabledBorderColor: =RGBA(166, 166, 166, 1)
                         DisabledColor: =RGBA(244, 244, 244, 1)
-                        Height: =Parent.TemplateHeight
+                        Height: =75
                         Icon: =Icon.ChevronRight
                         OnSelect: |
                             =Set(
@@ -504,7 +509,7 @@
                                 First(
                                     Filter(
                                         Tickets_Master,
-                                        Ticket_ID = Int(Gallery7.Selected.Ticket_ID)
+                                        Ticket_ID = Int('OT Body'.Selected.Ticket_ID)
                                     )
                                 )
                             );
@@ -520,30 +525,30 @@
                         Y: =0.00
                         ZIndex: =6
 
-            SidebarContainer3_2 As groupContainer.verticalAutoLayoutContainer:
+            "'Older Than 45 Days' As groupContainer.verticalAutoLayoutContainer":
                 AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 Fill: =RGBA(255, 255, 255, 1)
-                Height: =MainContainer2.Height
+                Height: ='Open Tickets'.Height
                 LayoutDirection: =LayoutDirection.Vertical
                 LayoutGap: =2
                 LayoutMinHeight: =75
                 LayoutMinWidth: |-
                     = If(
                             Dashboard.Width <= 640,  // Small screens
-                            BottomContainer2.Width,
+                            'RU, OT, OT45D'.Width,
                             // Add conditions for medium and large screens as needed
-                            BottomContainer2.Width / 8  // Example for larger screens
+                            'RU, OT, OT45D'.Width / 8  // Example for larger screens
                         )
                 LayoutMode: =LayoutMode.Auto
                 RadiusBottomLeft: =8
                 RadiusBottomRight: =8
                 RadiusTopLeft: =8
                 RadiusTopRight: =8
-                Y: =If(Dashboard.Width <= 640, SidebarContainer3_1.Y + SidebarContainer3_1.Height, 0)
+                Y: =If(Dashboard.Width <= 640, 'Recently Updated'.Y + 'Recently Updated'.Height, 0)
                 ZIndex: =3
 
-                Label18_21 As label:
+                "'OT45D Label' As label":
                     Align: =Align.Center
                     BorderColor: =RGBA(0, 89, 178, 1)
                     Color: =RGBA(204, 214, 224, 1)
@@ -571,7 +576,7 @@
                     Items: |-
                         =Sort(
                             Filter(
-                                Gallery7.AllItems,
+                                'OT Body'.AllItems,
                                 DateValue(
                                     Text(
                                         Created_Date,
@@ -679,7 +684,7 @@
                         Y: =22
                         ZIndex: =7
 
-        BottomContainer2_3 As groupContainer.horizontalAutoLayoutContainer:
+        "'QO, F/L, SR' As groupContainer.horizontalAutoLayoutContainer":
             Fill: =RGBA(245, 245, 245, 1)
             LayoutAlignItems: =LayoutAlignItems.Stretch
             LayoutGap: =16
@@ -698,6 +703,7 @@
             ZIndex: =4
 
             SidebarContainer3_4 As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =4
@@ -991,6 +997,7 @@
                             ZIndex: =2
 
             SidebarContainer3_3 As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =3
@@ -1111,6 +1118,7 @@
                     ZIndex: =7
 
             SidebarContainer3_5 As groupContainer.verticalAutoLayoutContainer:
+                AlignInContainer: =AlignInContainer.SetByContainer
                 DropShadow: =DropShadow.Light
                 Fill: =RGBA(255, 255, 255, 1)
                 FillPortions: =3
