--- a/CCFS Tickets/CanvasManifest.json
+++ b/CCFS Tickets/CanvasManifest.json
@@ -101,7 +101,7 @@
       "zeroalltabindexes": false
     },
     "Author": "",
-    "BindingErrorCount": 0,
+    "BindingErrorCount": 2,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 400,
     "DocumentAppType": "DesktopOrTablet",
@@ -140,7 +140,6 @@
     "Ticket Information",
     "Asset Dashboard",
     "Site Message Dashboard",
-    "Vendor Dashboard",
-    "Dashboard_1"
+    "Vendor Dashboard"
   ]
 }
