--- a/CCFS Tickets/Src/App.fx.yaml
+++ b/CCFS Tickets/Src/App.fx.yaml
@@ -222,7 +222,7 @@ App As appinfo:
             Param("NavigateScreen"),
             "TicketScreen",
             'Ticket Information',
-           Dashboard_1
+           Dashboard
         )
     Theme: =PowerAppsTheme
 
