--- a/CCFS Tickets/Src/App.fx.yaml
+++ b/CCFS Tickets/Src/App.fx.yaml
@@ -109,7 +109,7 @@ App As appinfo:
                 },
                 {
                     ID: 15,
-                    Name: "MY Site",
+                    Name: "My Site",
                     Logo: Icon.Tag
                 },
                 {
