--- a/CCFS Tickets/Src/Ticket Information.fx.yaml
+++ b/CCFS Tickets/Src/Ticket Information.fx.yaml
@@ -5250,7 +5250,7 @@
         RadiusTopLeft: =4
         RadiusTopRight: =4
         Visible: =NewAttachementContainerVisble
-        Width: =Parent.Width/2
+        Width: =Parent.Width /2
         Y: =(App.Height- MessageEntry_3.Height) /2
         ZIndex: =5
 
@@ -5267,7 +5267,7 @@
             PaddingTop: =4.63
             Size: = Min('Asset Dashboard'.Width / 40,18)
             Text: ="Attachments"
-            Width: =643
+            Width: =Parent.Width
             X: =0.00
             ZIndex: =3
 
